# aoc2022

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml  rustfmt.toml
inputs/: day01.txt  day03.txt  day04.txt  day05.txt  day06.txt  day10.txt  day11.txt  day13.txt  day16.txt  day18.txt  day19.txt  day21.txt  day23.txt  day24.txt
src/: lib.rs  treap.rs
