[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytemuck = "1.12.3"
hashbrown = "0.13.1"
itertools = "0.10.5"
rand = "0.8.5"
regex = "1.7.0"
serde = { version = "1.0.150", features = ["serde_derive"] }
serde_json = "1.0.89"
slotmap = "1.0.6"
z3 = { version = "0.11.2", optional = true }

[profile.release]
lto = "thin"
